Complete Spring Boot 4 workshop branch
Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>